# Magma

./: .clang-format  .gitignore  Dockerfile  README.md  docker-compose.yml  meson.build
gst-plugin/: magma_msg.proto  meson.build
gst-plugin/include/: magma-infer-meta.h  magma-meta.h  mgminfer.hpp  mgmkpublish.hpp  mgmpreproc.hpp  mgmserialize.hpp  mgmvideoconvert.hpp
gst-plugin/kernels/: dummy_infer.hip  kernel_utils.cpp  kernel_utils.hpp  preproc_kernels.hip
gst-plugin/src/: magma-infer-meta.cpp  magma-meta.cpp  mgminfer.cpp  mgmkpublish.cpp  mgmpreproc.cpp  mgmserialize.cpp  mgmvideoconvert.cpp
gst-plugin/tests/: meson.build  test_infer_object.cpp  test_inference_meta.cpp  test_mgminfer_tensor_pipe.cpp  test_mgmkpublish.cpp  test_mgmpreproc_tensor.cpp  test_mgmserialize.cpp  test_properties.cpp
gst-plugin/tests/onnx-gen/scaffolds/: simplexnet_linear.py  simplexnet_linear_adapted.py
